RESOLVED FIXED306095
[libpas] Linux should use futex instead of spinlock
https://bugs.webkit.org/show_bug.cgi?id=306095
Summary [libpas] Linux should use futex instead of spinlock
Yusuke Suzuki
Reported 2026-01-22 23:00:05 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-01-22 23:00:14 PST
Yusuke Suzuki
Comment 2 2026-01-22 23:01:45 PST
EWS
Comment 3 2026-01-23 18:07:59 PST
Committed 306134@main (345c6b8f6a47): <https://commits.webkit.org/306134@main> Reviewed commits have been landed. Closing PR #57108 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.