[libpas] Linux should use futex instead of spinlock https://bugs.webkit.org/show_bug.cgi?id=306095 rdar://168738039

Reviewed by Justin Michaud and Sosuke Suzuki.

Let's just have simple futex lock instead of spinlock in Linux.

* Source/bmalloc/libpas/src/libpas/pas_config.h:
* Source/bmalloc/libpas/src/libpas/pas_lock.h:
(pas_lock_construct):
(pas_lock_construct_disabled):
(pas_lock_futex_wait):
(pas_lock_futex_wake):
(pas_lock_lock):
(pas_lock_try_lock):
(pas_lock_unlock):
(pas_lock_assert_held):
(pas_lock_testing_assert_held):

Canonical link: https://commits.webkit.org/306134@main